--- a/components/conf/proposal-type.module.css
+++ b/components/conf/proposal-type.module.css
@@ -1,96 +1,8 @@
-.cards {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto 10px;
-  max-width: 700px;
-}
-
-.gradient {
-  border-radius: 12px;
-  background-clip: content-box, border-box;
-  background-image: linear-gradient(black, black),
-    linear-gradient(to right, var(--accents-7), var(--accents-7));
-  padding: 2px;
-  flex: 1;
-  margin-right: 0;
-  margin-bottom: 24px;
-  display: flex;
-  flex-direction: column;
-  transition: all 0.2s ease;
-}
-
-.gradient:hover {
-  background-image: linear-gradient(black, black),
-    linear-gradient(
-      90deg,
-      #ec6192 4.44%,
-      #ec4c34 21.45%,
-      #ffbd2b 37.21%,
-      #ebde56 54.63%,
-      #57c754 70.8%,
-      #53a1eb 84.07%
-    );
-}
-
-@media (min-width: 768px) {
-  .gradient {
-    margin-right: 24px;
-    margin-bottom: 24px;
-  }
-}
-
-.card {
-  padding: var(--geist-gap);
-  text-align: left;
-  background: none;
-  font-family: var(--font-sans);
-  color: var(--secondary-color);
-  font-size: 16px;
-  border: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  cursor: pointer;
-}
-
-.card:hover {
-  color: var(--secondary-color);
-}
-
-.proposal-type {
-  font-size: 26px;
-  line-height: 1;
-  font-weight: 800;
-  color: white;
-}
-
-.additional-info-section {
-  display: flex;
-  flex-direction: row;
-}
-
-@media (min-width: 768px) {
-  .additional-info-section {
-    flex-direction: column;
-  }
-}
-
-.proposal-text {
-  line-height: 1.4;
-}
-
-.additional-info {
-  font-size: 14px;
-  margin-bottom: 0;
-  color: var(--secondary-color);
-}
-
 .small-description {
   color: var(--secondary-color);
   text-align: center;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 20px auto 0;
 }
 
 .description-link {
@@ -104,15 +16,6 @@
 
 .section {
   margin-bottom: 90px;
-}
-
-.small-hero {
-  font-size: 36px;
-  line-height: 1.15;
-  letter-spacing: -0.05em;
-  font-weight: 800;
-  margin: 0 0 20px;
-  text-align: center;
 }
 
 .panels {
